# beamy

./: FRAME_MODULE_SUMMARY.md  README.md  analysis plans.md  api enhancements.md  integration of 1D and 3D.md  pyproject.toml
documentation/: FEM.md  analysis.md  new idea.md
documentation/checks/: chap E aisc.md  chap F aisc.md  chap H aisc.md
documentation/dev/: design_decisions.md  ideas.md
documentation/idea/: idea.md  package structure.md  releases supports and connections.md  summary.md
documentation/learning/: overview.md  physics.md
documentation/new idea/: new idea.md  package structure.md  releases supports and connections.md
documentation/overview/: outcomes.md
documentation/reference/: analysis.md  beam.md  design.md  io.md  loads.md  model.md  outcomes.md  reference.md  results.md  viz.md
documentation/user guide/: api.md  units.md  user_guide.md
examples/: README.md  aisc_check_example.py  aisc_check_standalone.py  cantilever.py  cube_frame.py  different_sections.py  ibeam.py  line_plots.py  multi_load.py  portal_frame.py  simple_beam.py  stress_analysis.py  support_plot.py  support_reactions.py  tf.py
examples/basics/: cantilever.py  simple_beam.py
examples/loads/: multi_load.py
examples/plots/: line_plots.py
examples/section/: different_sections.py  ibeam.py  stress_analysis.py
testing/: analysis.py  ibeam.py  local_loads_smoke.py  main.py  nodal_spring_smoke.py  plotter.py  second_order_sign_smoke.py  section_plot_test.py  section_stress.py  test_loaded_member_integration.py
tf/: loading.md  loading.py  tf.py
(+99 files in other folders)
