[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beamy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "sectiony",
    "unity",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
sectiony = { git = "https://github.com/EdwardAstill/sectiony" }
unity = { git = "https://github.com/EdwardAstill/unity" }
